# trabalho-3-2-dna-profiler-reiarthursr

./: CMakeLists.txt  README.md
data/: data_teste.csv  sequence_teste0no_match.txt  sequence_teste1.txt  sequence_teste2erro.txt  sequence_teste3.txt
include/: Arquivos.hpp  BaseDD.hpp  Pessoa.hpp  Sistema.hpp
src/: Arquivos.cpp  BaseDD.cpp  Dna.cpp  Pessoa.cpp  Sistema.cpp
